--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,16 +37,16 @@
     <string name="turkish_bio">Finely ground coffee simmered to create a strong brew.</string>
 
     <string name="ristretto">Ristretto</string>
-    <string name="ristretto_bio">A shorter, more concentrated espresso with a powerful, rich taste.</string>
+    <string name="ristretto_bio">An intense espresso shot with a rich taste.</string>
 
     <string name="affogato">Affogato</string>
     <string name="affogato_bio">Espresso poured over vanilla ice cream for a hot-cold delight.</string>
 
     <string name="cortado">Cortado</string>
-    <string name="cortado_bio">Equal parts espresso and warm milk for a smooth, balanced flavour.</string>
+    <string name="cortado_bio">Equal parts espresso and warm milk for a smooth flavour.</string>
 
     <string name="red_eye">Red Eye</string>
-    <string name="redeye_bio">Brewed coffee boosted with a shot of espresso for an intense kick.</string>
+    <string name="redeye_bio">Bold coffee boosted with a strong shot of espresso.</string>
 
     <string name="doppio">Doppio</string>
     <string name="doppio_bio">Double shot of espresso for a deep, bold experience.</string>
@@ -58,7 +58,7 @@
     <string name="vienna_bio">Two espresso shots topped with whipped cream instead of milk.</string>
 
     <string name="breve">Breve</string>
-    <string name="breve_bio">Espresso mixed with steamed half-and-half for a rich, creamy drink.</string>
+    <string name="breve_bio">Espresso mixed with steamed half-and-half for a creamy drink.</string>
 
     <string name="nitro_cold_brew">Nitro Cold Brew</string>
     <string name="nitro_bio">Cold brew infused with nitrogen for a frothy texture.</string>
