slight mistake in strings fixed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,7 +79,7 @@
     <string name="maza_bio">Cold coffee drink with lemon and sugar.</string>
     
     <string name="bicerin">Bicerin</string>
-    <string name="Layered drink of espresso, chocolate, and milk."
+    <string name="bicerin_bio">Layered drink of espresso, chocolate, and milk.</string>
 
     <string name="coffee_title">Coffee Picks</string>
     <string name="cafe_title">Nearby Cafes</string>
